# Lists-Intersection-Sandbox

./: CMakeLists.txt  README.md
include/algorithms/: binary_search.h  dumb.h  gallop_binary_search.h  linear_gallop_binary_search.h  min_max.h  swap.h
include/interfaces/: intersector.h
include/intersectors/: baeza_yates.h  dumb_bs.h  mail_ru.h  mail_ru_improved.h
include/structures/: list.h  lists.h  timer.h
src/: main.c
src/algorithms/: binary_search.c  dumb.c  gallop_binary_search.c  linear_gallop_binary_search.c
src/intersectors/: baeza_yates.c  dumb.c  dumb_bs.c  mail_ru.c  mail_ru_improved.c
src/structures/: list.c  lists.c  timer.c
